--- a/music.html
+++ b/music.html
@@ -2,3 +2,18 @@
 layout: page
 title: Music
 ---
+<!DOCTYPE HTML>
+<html>
+<body>
+  {% assign song_posts = site.posts | where: 'category', 'music' %}
+  {% for song in site.data.soundcloud %}
+  {% assign post = song_posts | where: 'title', song.title %}
+  {% if post %}
+    <a href="{{ post[0].url }}">{{ post[0].title }}</a><br>
+  {% endif %}
+
+    <iframe width="100%" height="3%" scrolling="yes" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{song.track}}&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/minor6" title="ameertg" target="_blank" style="color: #cccccc; text-decoration: none;">ameertg</a> · <a href="{{song.url}}" title="{{song.title}}" target="_blank" style="color: #cccccc; text-decoration: none;">{{song.title}}</a></div><br>
+    <br>
+  {% endfor %}
+</html>
+</body>
