--- a/cv.html
+++ b/cv.html
@@ -2,5 +2,5 @@
 layout: page
 title: CV
 ---
-<head><meta http-equiv="Refresh" content="0; url=cv.pdf"/></head>
+<head><meta http-equiv="Refresh" content="0; url=CV.pdf"/></head>
 <a href=cv.pdf>...redirect</a>
