--- a/projects.html
+++ b/projects.html
@@ -2,3 +2,18 @@
 layout: page
 title: Projects
 ---
+
+<!DOCTYPE HTML>
+<html>
+  <body>
+    
+    <ul>
+      {% for post in site.posts | where: 'category', 'music'%}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+  
+  </body>
+</html>
