--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@ title: Projects
   <body>
     
     <ul>
-      {% for post in site.posts | where: 'category', 'music'%}
+      {% for post in site.posts | where: 'category', 'project'%}
         <li>
           <a href="{{ post.url }}">{{ post.title }}</a>
         </li>
