--- a/projects.html
+++ b/projects.html
@@ -6,14 +6,15 @@ title: Projects
 <!DOCTYPE HTML>
 <html>
   <body>
-    
+
     <ul>
       {% for post in site.posts | where: 'category', 'project'%}
         <li>
           <a href="{{ post.url }}">{{ post.title }}</a>
+          {{post.exerpt}}
         </li>
       {% endfor %}
     </ul>
-  
+
   </body>
 </html>
