cringey welcome page

--- a/index.html
+++ b/index.html
@@ -2,3 +2,13 @@
 layout: home
 title: Home
 ---
+
+<!DOCTYPE HTML>
+<html>
+<body>
+  Hi, welcome! I am a first year PhD candidate at the University of Edinburgh,
+  focusing on knowledge graphs and argument mining for decision making applications.
+  <br>
+  I created this blog to work on communicating my ideas and work, feel free to explore and don't be afraid to get in touch!
+  </body>
+</html>
