--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,11 @@ title: Projects
   <body>
 
     <ul>
-      {% for post in site.posts | where: 'category', 'project'%}
+      {% assign projects = site.posts | where: 'category', "project"%}
+      {% for project in projects %}
         <li>
-          <a href="{{ post.url }}">{{ post.title }}</a>
-          {{ post.excerpt }}
+          <a href="{{ project.url }}">{{ project.title }}</a>
+          {{ project.excerpt }}
         </li>
       {% endfor %}
     </ul>
