--- a/cv.html
+++ b/cv.html
@@ -2,5 +2,4 @@
 layout: single
 title: CV
 ---
-<head><meta http-equiv="Refresh" content="0; url=CV.pdf"/></head>
-<a href=cv.pdf>...redirect</a>
+<object data="cv.pdf" width="1000" height="1000" type='application/pdf'></object>
