--- a/cv.html
+++ b/cv.html
@@ -2,4 +2,4 @@
 layout: single
 title: CV
 ---
-<object data="cv.pdf" width="1000" height="1000" type='application/pdf'></object>
+<object data="assets/pdfs/cv.pdf" width="1000" height="1000" type='application/pdf'></object>
