change everything for a button

--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 layout: home
 title: Home
 author_profile: true
+list_title: Recent Posts
 ---
 
-<!DOCTYPE HTML>
-<html>
-<body>
-  Hi, welcome! I am a first year PhD candidate at the University of Edinburgh,
-  focusing on knowledge graphs and argument mining for decision making applications.
+<p>
+  Hi, welcome! I am a third year PhD candidate at the University of Edinburgh, supervised by <a href="https://homepages.inf.ed.ac.uk/nkokciya/">Nadin Kökciyan</a>.
+  My PhD focus on computational methods to make implicit information explicit when people argue. 
+  More broadly, I am interested in theories and models of collective reasoning in humans and finding ways that technology can be used to mediate disagreement.
   I created this blog to work on communicating my ideas and work, feel free to explore and don't be afraid to get in touch!
-</body>
-</html>
+</p>
