--- a/cv.html
+++ b/cv.html
@@ -1,5 +1,5 @@
 ---
-layout: single
+layout: page
 title: CV
 ---
-<object data="{{ assets/pdfs/cv.pdf | absolute_url }}" width="1000" height="1000" type='application/pdf'></object>
+<object data="{{ "assets/pdfs/CV.pdf" | relative_url }}" width="1000" height="1000" type='application/pdf'></object>
