--- a/cv.html
+++ b/cv.html
@@ -2,4 +2,4 @@
 layout: page
 title: CV
 ---
-<object data="{{ "assets/pdfs/CV.pdf" | relative_url }}" width="1000" height="1000" type='application/pdf'></object>
+<object data="{{ "assets/pdfs/CV.pdf" | relative_url }}" width="100%" height="1000" type='application/pdf'></object>
