--- a/music.html
+++ b/music.html
@@ -15,16 +15,19 @@ author_profile: true
   {% if post %}
     <a href="{{ post[0].url }}">{{ post[0].title }}</a>
   {% endif %}
-  <div class="row">
-  <div class="col-6 embed-responsive">
+  <div class="container bg-secondary">
 
-    <iframe class="embed-responsive-item" width="100%" height="200px" src="https://bandcamp.com/EmbeddedPlayer/album={{ album.id }}/size=medium/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="{{ album.url }}">all that broke from a single lamp by Dawam</a></iframe>  
+  <div class="row  nopadding">
+  <div class="col-md-5 g-0 col-s-12 ms-0 ">
+    <iframe style="width: 350px; height: 560px;" src="https://bandcamp.com/EmbeddedPlayer/album={{ album.id }}/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=true/transparent=true/" seamless><a href="{{ album.url }}">{{ album.title }}</a></iframe>
   </div>
-  <div class="col-6">
+  <div class="col-md-7 g-0 col-s-12 align-self-center text-light ps-0 pe-4 ">
     <p>{{ album.liner }}</p>
 </div>
+</div>
+</div>
     {% endfor %}
-  
+
 
   <h2>Unreleased Tracks</h2>
 
