update blog post and home

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ list_title: Recent Posts
 
 <p>
   Hi, welcome! I am a third year PhD candidate at the University of Edinburgh, supervised by <a href="https://homepages.inf.ed.ac.uk/nkokciya/">Nadin Kökciyan</a>.
-  My PhD focus on computational methods to make implicit information explicit when people argue. 
-  More broadly, I am interested in theories and models of collective reasoning in humans and finding ways that technology can be used to mediate disagreement.
-  I created this blog to work on communicating my ideas and work, feel free to explore and don't be afraid to get in touch!
+  My PhD focuses on computational methods to make implicit information explicit in the context of online argumentation. 
+  More broadly, I am interested in theories and models of collective reasoning in humans and finding ways that technology can be used to resolve disagreement and encourage better discussion outcomes.
+  I created this blog to work on communicating my ideas and work, currently looking for PostDoc positions, so please get in touch to have a chat! 
 </p>
